--- a/app/src/main/res/layout/view_holder_navigation.xml
+++ b/app/src/main/res/layout/view_holder_navigation.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Writing Color"
