--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <!--ColorPick-->
     <color name="black_4C4E56">#4C4E56</color>
+    <color name="black_707070">#707070</color>
 
 
 </resources>
