--- a/app/src/main/res/drawable/toast_background.xml
+++ b/app/src/main/res/drawable/toast_background.xml
@@ -5,7 +5,7 @@
             android:shape="rectangle">
 
             <solid
-                android:color="@color/black_4C4E56"/>
+                android:color="@color/color_4C4E56"/>
 
             <corners
                 android:radius="5dp"/>
