--- a/app/src/main/res/layout/activity_writing_color.xml
+++ b/app/src/main/res/layout/activity_writing_color.xml
@@ -199,7 +199,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="20dp"
-        android:background="@color/black_4C4E56"
+        android:background="@color/color_4C4E56"
         android:paddingStart="15dp"
         android:paddingTop="10dp"
         android:paddingEnd="15dp"
