--- a/app/src/main/res/layout/view_holder_navigation.xml
+++ b/app/src/main/res/layout/view_holder_navigation.xml
@@ -30,7 +30,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/black_4C4E56"
+        android:background="@color/color_4C4E56"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
