--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"/>
 
     <ImageView
+        android:id="@+id/imageViewPhoto"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_camera_fffff3"
@@ -21,6 +22,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="40dp"/>
+
+    <FrameLayout
+        android:id="@+id/frameLayoutShutter"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_1E1E1E"/>
+
 
 
 
