--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="color_707070">#707070</color>
     <color name="color_A593E0">#A593E0</color>
     <color name="color_566270">#566270</color>
+    <color name="color_1E1E1E">#1E1E1E</color>
 
 
 </resources>
