--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -9,7 +9,8 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
     <ImageView
         android:id="@+id/imageViewPhoto"
@@ -25,6 +26,13 @@
 
     <FrameLayout
         android:id="@+id/frameLayoutShutter"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_1E1E1E"/>
+
+    <ImageView
+        android:id="@+id/imageViewPreview"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
