--- a/app/src/main/res/layout/activity_color_average.xml
+++ b/app/src/main/res/layout/activity_color_average.xml
@@ -13,13 +13,14 @@
         android:layout_height="match_parent"/>
 
     <ImageView
+        android:id="@+id/imageViewCancel"
         android:layout_width="30dp"
         android:layout_height="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/ic_cancel_fffff3"/>
+        android:src="@drawable/ic_cancel_fffff3" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintBottom_toBottomOf="parent"
