--- a/app/src/main/res/layout/activity_color_average.xml
+++ b/app/src/main/res/layout/activity_color_average.xml
@@ -37,6 +37,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <View
+            android:id="@+id/viewColor1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/viewAverage"
+            android:layout_marginStart="10dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
